Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-33633

Rebalance exited with reason : buckets_shutdown_wait_failed

    XMLWordPrintable

Details

    Description

      Seeing intermittent issue where rebalance is failing due to bucket deletion timeout during test teardown in 6.5.0-2804. This was not seen in build 6.5.0-2715.

      ./ns_server.debug.log:[ns_server:error,2019-04-01T13:19:17.737-07:00,ns_1@172.23.105.96:<0.5498.22>:ns_memcached:ensure_bucket:1269]Unable to get config for bucket "default": {error,
      ./ns_server.debug.log:[ns_server:error,2019-04-01T13:19:51.893-07:00,ns_1@172.23.105.96:<0.6721.22>:timeout_diag_logger:do_diag:120]Got timeout {slow_bucket_stop,{{single_bucket_kv_sup,"sasl_bucket_1"},
      ./ns_server.debug.log:[ns_server:error,2019-04-01T13:19:55.767-07:00,ns_1@172.23.105.96:<0.7040.22>:ns_memcached:ensure_bucket:1269]Unable to get config for bucket "standard_bucket_1": {error,
      ./ns_server.info.log:[ns_server:error,2019-04-01T13:19:17.737-07:00,ns_1@172.23.105.96:<0.5498.22>:ns_memcached:ensure_bucket:1269]Unable to get config for bucket "default": {error,
      ./ns_server.info.log:[ns_server:error,2019-04-01T13:19:51.893-07:00,ns_1@172.23.105.96:<0.6721.22>:timeout_diag_logger:do_diag:120]Got timeout {slow_bucket_stop,{{single_bucket_kv_sup,"sasl_bucket_1"},
      ./ns_server.info.log:[ns_server:error,2019-04-01T13:19:55.767-07:00,ns_1@172.23.105.96:<0.7040.22>:ns_memcached:ensure_bucket:1269]Unable to get config for bucket "standard_bucket_1": {error,
      ./ns_server.error.log:[ns_server:error,2019-04-01T13:19:17.737-07:00,ns_1@172.23.105.96:<0.5498.22>:ns_memcached:ensure_bucket:1269]Unable to get config for bucket "default": {error,
      ./ns_server.error.log:[ns_server:error,2019-04-01T13:19:51.893-07:00,ns_1@172.23.105.96:<0.6721.22>:timeout_diag_logger:do_diag:120]Got timeout {slow_bucket_stop,{{single_bucket_kv_sup,"sasl_bucket_1"},
      ./ns_server.error.log:[ns_server:error,2019-04-01T13:19:55.767-07:00,ns_1@172.23.105.96:<0.7040.22>:ns_memcached:ensure_bucket:1269]Unable to get config for bucket "standard_bucket_1": {error,
      ./ns_server.ns_couchdb.log:[ns_server:error,2019-04-01T13:19:49.723-07:00,couchdb_ns_1@127.0.0.1:<0.2935.1>:timeout_diag_logger:do_diag:120]Got timeout {slow_bucket_stop,{{single_bucket_kv_sup,"sasl_bucket_1"},
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            pavithra.mahamani Pavithra Mahamani (Inactive)
            pavithra.mahamani Pavithra Mahamani (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty