MB-33633: Change ON_BUCKET_DELETE to virtual function

And add a log entry right after the call to initiate_shutdown
so that we can track where in the shutdown logic we're blocked

Change-Id: Id2e1e914ad9f7edfe9133d36aa6898aafdb29dd7
Reviewed-on: http://review.couchbase.org/107801
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>